Adds content to homepage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,149 @@
 ---
-layout: default
+layout: home
 ---
 
-<h1>Home</h1>
+
+<!-- HERO -->
+<section class="p-t-lg p-b-lg text-center" >
+	<h1 class="display-4 p-t-lg p-b-lg ">Introduce Your Dreams to Your Life</h1>
+</section>
+
+
+<!-- OUR PRODUCTS -->
+<section class="p-t-lg">
+	<div class="no-container">
+		<div class="card-group">
+			<div class="card">
+			    <div class="card-block p-l-lg p-r-lg p-t-lg p-b-lg" style="height:600px">
+					<h2 class="p-b-md">Remove Credit Card Balances</h2>
+					<h5>The Payoff Loan</h5>
+					<p>The Payoff Loan&trade; allows you to step away from your credit card balances and focus on what's most important to you. Free yourself of $5000 to $25,000 in credit card balances and take steps toward a happy, successful future.</p>
+					<a href="#">Learn More</a>
+			    </div>
+			</div>
+			<div class="card">
+			    <div class="card-block p-l-lg p-r-lg p-t-lg p-b-lg " style="height:600px">
+					<h2 class="p-b-md">Manage Everyday Spending</h2>
+					<h5>The Dream Card &amp; Payoff Guide</h5>
+					<p>The Payoff Loan&trade; allows you to step away from your credit card balances and focus on what's most important to you. Free yourself of $5000 to $25,000 in credit card balances and take steps toward a happy, successful future.</p>
+					<a href="#">Learn More</a>
+			    </div>
+			</div>
+			<div class="card">
+			    <div class="card-block p-l-lg p-r-lg p-t-lg p-b-lg" style="height:600px">
+					<h2 class="p-b-md">Plan for Future Savings</h2>
+					<h5>Payoff Wealth</h5>
+					<p>The Payoff Loan&trade; allows you to step away from your credit card balances and focus on what's most important to you. Free yourself of $5000 to $25,000 in credit card balances and take steps toward a happy, successful future.</p>
+					<a href="#">Learn More</a>
+			    </div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+
+<!-- OUR DIFFERENCE -->
+<section class="p-t-lg p-b-lg text-center">
+	<div class="container">
+		<div class="compact">
+			<h2 class="p-t-lg">Our Difference</h2>
+			<p class="lead">Through a combination of understanding who people are and what motivates them with our unwavering desire to see customers succeed, we are committed to the mission of restoring humanity to financial services.</p>
+		</div>
+	</div>
+</section>
+
+
+
+<!-- TABS -->
+<section class="p-t-lg">
+	<div>
+
+	  <!-- Nav tabs -->
+	  <ul class="nav nav-pills row" role="tablist">
+	    <li role="presentation" class="col-lg-6 active  text-center">
+	    	<a href="#fpq" aria-controls="fpq" role="tab" data-toggle="tab">
+	    		<h5>Understand</h5>
+	    		<p>Find out why you spend</p>
+	    	</a>
+	    </li>
+	    <li role="presentation" class="col-lg-6 text-center">
+	    	<a href="#stories" aria-controls="stories" role="tab" data-toggle="tab">
+	    		<h5>The Stories</h5>
+	    		<p>We're in this to better human lives</p>
+	    	</a>
+	    </li>
+
+	  </ul>
+
+	  <!-- Tab panes -->
+	  <div class="tab-content">
+	    <div role="tabpanel" class="tab-pane active" id="fpq">
+	    	<div class="row">
+		    	<div class="col-lg-8 p-l-lg p-r-lg p-t-lg p-b-lg" style="background:#ccc; height:600px">
+		    		<h2>Discover Your Financial Personality</h2>
+		    		<p>By taking the Payoff Financial Personality Quiz, you can pinpoint the secrets behind how you spend, save and mnage your money.</p>
+		    		<a class="btn btn-primary">Take the Quiz</a>
+		    	</div>
+		    	<div class="col-lg-4 p-l-lg p-r-lg p-t-lg p-b-lg" style="background:#eee; height:600px">
+		    		<h2>The Free Spirit</h2>
+		    		<p>You focus on getting things done quickly, rather than getting them done perfectly. You buck routine, always getting restless if you're doing the same thing day in and day out. </p>
+		    		<a class="btn  btn-secondary">See All Personalities</a>
+		    	</div>
+	    	</div>
+	    </div>
+	    <div role="tabpanel" class="tab-pane" id="stories">
+	    	<div class="row no-gutter" >
+		    	<div class="col-lg-8" style="height:480px; background:#444">
+		    		&nbsp;
+		    	</div>
+		    	<div class="col-lg-4" style="height:480px; background:#333">
+		    		&nbsp;
+		    	</div>
+	    	</div>
+	    	<div class="row no-gutter" >
+		    	<div class="col-lg-4" style="height:320px; background:#555">
+		    		&nbsp;
+		    	</div>
+		    	<div class="col-lg-4" style="height:320px; background:#222">
+		    		&nbsp;
+		    	</div>
+		    	<div class="col-lg-4" style="height:320px; background:#111">
+		    		&nbsp;
+		    	</div>
+	    	</div>
+	    </div>
+	  </div>
+
+	</div>
+</section>
+
+
+
+
+<!-- ABOUT -->
+<section class="p-t-lg p-b-lg text-center">
+	<div class="container p-t-lg p-b-lg">
+		<div class="row">
+			<div class="col-lg-4">
+				<p><img src="http://placehold.it/180x120"></p>
+				<h5>Payoff Mission</h5>
+				<p>Payoff i a next generation financial services company, designing products that help people payy off their credit cards faster and save money.</p>
+				<a href="#">Watch the video</a>
+			</div>
+			<div class="col-lg-4">
+				<p><img src="http://placehold.it/180x120"></p>
+				<h5>Payoff Team</h5>
+				<p>Though our talents may be diverse, we are all aligned with the mission to restor humanity to financial services. </p>
+				<a href="/company/team/">Meet the team</a>
+			</div>
+			<div class="col-lg-4">
+				<p><img src="http://placehold.it/180x120"></p>
+				<h5>Payoff Community</h5>
+				<p>We're all about community and connecting the world for the better. Join us in our mission to bring a refreshingly human approach to finance.</p>
+				<a href="#">Get Involved</a>
+			</div>
+		</div>
+	</div>
+
+</section>
