Adds content for all existing pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: home
 
 
 <!-- HERO -->
-<section class="p-t-lg p-b-lg text-center" >
-	<h1 class="display-4 p-t-lg p-b-lg ">Introduce Your Dreams to Your Life</h1>
+<section class="p-b-lg text-center" style="padding-top:400px" >
+	<h1 class="display-4 p-b-lg ">Introduce Your Dreams to Your Life</h1>
 </section>
 
 
@@ -128,7 +128,7 @@ layout: home
 			<div class="col-lg-4">
 				<p><img src="http://placehold.it/180x120"></p>
 				<h5>Payoff Mission</h5>
-				<p>Payoff i a next generation financial services company, designing products that help people payy off their credit cards faster and save money.</p>
+				<p>Payoff is a next generation financial services company, designing products that help people pay off their credit cards faster and save money.</p>
 				<a href="#">Watch the video</a>
 			</div>
 			<div class="col-lg-4">
