designing for homepage, lots of custom lines of CSS

--- a/index.html
+++ b/index.html
@@ -6,40 +6,62 @@ layout: home
 <!-- HERO -->
 <div class="container-fluid m-b-lg">
 
-	<section class="row hero-home text-center">
+	<section class="row hero hero-home text-center">
 
 		<span class="hero-copy">
-			<h1>Introduce Your Dreams to Your Life</h1>
+			<!-- <h1>Introduce Your Dreams to Your Life</h1> -->
+			<h1>Make Your Dreams a Reality</h1>
 		</span>
 
 	</section>
 
 	<!-- OUR PRODUCTS -->
 	<section class="row">
-		<div class="panel-group">
-			<div class="panel panel-default col-sm-12 col-md-4">
-			    <div class="card-block p-a-lg" >
-					<h2 class="p-b-md">Remove Credit Card Balances</h2>
-					<h5>The Payoff Loan</h5>
-					<p>The Payoff Loan&trade; allows you to step away from your credit card balances and focus on what's most important to you. Free yourself of $5000 to $25,000 in credit card balances and take steps toward a happy, successful future.</p>
-					<a href="#">Learn More</a>
+		<div class="panel-group stories-panel-group">
+			<div class="panel panel-story col-sm-12 col-md-4">
+			    <div class="panel-story-inner" >
+						<span class="story-upper">
+							<h2 class="p-b-md">Remove Credit</br>Card Balances</h2>
+						</span>
+						<span class="story-lower">
+							<div class="story-text-wrap">
+								<h6>The Payoff Loan</h6>
+								<p>The Payoff Loan&trade; allows you to step away from your credit card balances and focus on what's most important to you. Free yourself of $5000 to $25,000 in credit card balances and take steps toward a happy, successful future.</p>
+								<a href="#">Learn More</a>
+							</div>
+						</span>
+						<div class="story-bkg" style="background-image: url({{ site.baseurl }}/assets/past-story.png);"></div>
 			    </div>
 			</div>
-			<div class="panel panel-default col-sm-12 col-md-4">
-			    <div class="card-block p-a-lg " >
-					<h2 class="p-b-md">Manage Everyday Spending</h2>
-					<h5>The Dream Card &amp; Payoff Guide</h5>
-					<p>The Payoff Loan&trade; allows you to step away from your credit card balances and focus on what's most important to you. Free yourself of $5000 to $25,000 in credit card balances and take steps toward a happy, successful future.</p>
-					<a href="#">Learn More</a>
-			    </div>
+			<div class="panel panel-story col-sm-12 col-md-4">
+				<div class="panel-story-inner" >
+					<span class="story-upper">
+						<h2 class="p-b-md">Manage your</br>Everyday Spending</h2>
+					</span>
+					<span class="story-lower">
+						<div class="story-text-wrap">
+							<h6>The Dream Card &amp; Payoff Guide</h6>
+							<p>The Payoff Loan&trade; allows you to step away from your credit card balances and focus on what's most important to you. Free yourself of $5000 to $25,000 in credit card balances and take steps toward a happy, successful future.</p>
+							<a href="#">Learn More</a>
+						</div>
+					</span>
+					<div class="story-bkg" style="background-image: url({{ site.baseurl }}/assets/present-story.png);"></div>
+		    </div>
 			</div>
-			<div class="panel panel-default col-sm-12 col-md-4">
-			    <div class="card-block p-a-lg" >
-					<h2 class="p-b-md">Plan for Future Savings</h2>
-					<h5>Payoff Wealth</h5>
-					<p>The Payoff Loan&trade; allows you to step away from your credit card balances and focus on what's most important to you. Free yourself of $5000 to $25,000 in credit card balances and take steps toward a happy, successful future.</p>
-					<a href="#">Learn More</a>
-			    </div>
+			<div class="panel panel-story col-sm-12 col-md-4">
+				<div class="panel-story-inner" >
+					<span class="story-upper">
+						<h2 class="p-b-md">Plan for</br>Future Savings</h2>
+					</span>
+					<span class="story-lower">
+						<div class="story-text-wrap">
+							<h6>Payoff Wealth</h6>
+							<p>The Payoff Loan&trade; allows you to step away from your credit card balances and focus on what's most important to you. Free yourself of $5000 to $25,000 in credit card balances and take steps toward a happy, successful future.</p>
+							<a href="#">Learn More</a>
+						</div>
+					</span>
+					<div class="story-bkg" style="background-image: url({{ site.baseurl }}/assets/future-story.png);"></div>
+		    </div>
 			</div>
 		</div>
 	</section>
