nav changes on main pages, as well as a subnav addition on the product page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: home
 			<div class="panel panel-thumb col-xs-12 col-sm-4 col-md-4">
 		    <div class="panel-thumb-inner" >
 					<span class="thumb-upper">
-						<h2 class="p-b-md">Remove Credit</br>Card Balances</h2>
+						<h2>Remove Credit</br>Card Balances</h2>
 					</span>
 					<span class="thumb-lower">
 						<div class="thumb-text-wrap">
@@ -36,7 +36,7 @@ layout: home
 			<div class="panel panel-thumb col-xs-12 col-sm-4 col-md-4">
 				<div class="panel-thumb-inner" >
 					<span class="thumb-upper">
-						<h2 class="p-b-md">Manage your</br>Everyday Spending</h2>
+						<h2>Manage your</br>Everyday Spending</h2>
 					</span>
 					<span class="thumb-lower">
 						<div class="thumb-text-wrap">
@@ -51,7 +51,7 @@ layout: home
 			<div class="panel panel-thumb col-xs-12 col-sm-4 col-md-4">
 				<div class="panel-thumb-inner" >
 					<span class="thumb-upper">
-						<h2 class="p-b-md">Plan for</br>Future Savings</h2>
+						<h2>Plan for</br>Future Savings</h2>
 					</span>
 					<span class="thumb-lower">
 						<div class="thumb-text-wrap">
@@ -67,13 +67,11 @@ layout: home
 	</section>
 
 	<!-- OUR DIFFERENCE -->
-	<section class="row p-y-lg text-center">
-		<div class="container">
-			<div class="compact">
-				<h2 class="p-t-lg">Our Difference</h2>
-				<p class="lead">Through a combination of understanding who people are and what motivates them with our unwavering desire to see customers succeed, we are committed to the mission of restoring humanity to financial services.</p>
-			</div>
-		</div>
+	<section class="row hero hero-section text-center">
+		<span class="hero-copy hero-copy narrow">
+			<h2>Our Difference</h2>
+			<p class="lead">Through a combination of understanding who people are and what motivates them with our unwavering desire to see customers succeed, we are committed to the mission of restoring humanity to financial services.</p>
+		</span>
 	</section>
 
 	<!-- TABS -->
