--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: home
 
 
 <!-- HERO -->
-<div class="container-hero container-fluid m-b-lg">
+<div class="container-hero outer container-fluid m-b-lg">
 
 	<section class="row hero hero-home text-center">
 
