started working on a ../style-guide page for components, also built Slick Carousel into the project, see it on the homepage on mobile. :)

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@ layout: home
 
 
 <!-- HERO -->
-<div class="container-hero outer container-fluid m-b-lg">
+<div class="container-flush outer container-fluid m-b-lg">
 
 	<section class="row hero hero-home text-center">
-
 		<span class="hero-copy">
-			<!-- <h1>Introduce Your Dreams to Your Life</h1> -->
-			<h1>Make Your Dreams a Reality</h1>
+			<h1>Introduce Your Dreams to Your Life</h1>
+			<!-- <h1>Make Your Dreams a Reality</h1> -->
 		</span>
-
 	</section>
 
 	<!-- OUR PRODUCTS -->
@@ -67,7 +65,7 @@ layout: home
 	</section>
 
 	<!-- OUR DIFFERENCE -->
-	<section class="row hero hero-section text-center">
+	<section class="row hero hero-section hero-section__difference text-center">
 		<span class="hero-copy hero-copy narrow">
 			<h2>Our Difference</h2>
 			<p class="lead">Through a combination of understanding who people are and what motivates them with our unwavering desire to see customers succeed, we are committed to the mission of restoring humanity to financial services.</p>
@@ -75,7 +73,7 @@ layout: home
 	</section>
 
 	<!-- TABS -->
-	<section class="row p-t-lg">
+	<section class="row">
 
 	  <!-- Nav tabs -->
 		<ul class="thumb-panel-group thumb-panel-group-difference" role="tablist">
@@ -113,12 +111,12 @@ layout: home
 		    	<div class="col-lg-8 p-a-lg" style="background:#ccc; height:600px">
 		    		<h2>Discover Your Financial Personality</h2>
 		    		<p>By taking the Payoff Financial Personality Quiz, you can pinpoint the secrets behind how you spend, save and mnage your money.</p>
-		    		<a class="btn btn-primary">Take the Quiz</a>
+		    		<a class="btn btn-action">Take the Quiz</a>
 		    	</div>
 		    	<div class="col-lg-4 p-a-lg" style="background:#eee; height:600px">
 		    		<h2>The Free Spirit</h2>
 		    		<p>You focus on getting things done quickly, rather than getting them done perfectly. You buck routine, always getting restless if you're doing the same thing day in and day out. </p>
-		    		<a class="btn  btn-secondary">See All Personalities</a>
+		    		<a class="btn  btn-default-invert">See All Personalities</a>
 		    	</div>
 	    	</div>
 	    </div>
